--- a/department-of-cse.html
+++ b/department-of-cse.html
@@ -381,6 +381,7 @@
                 <!-- =======Assistant Professor======= -->
                 <div class="column">
                     <div class="card">
+                        <div class="bordershadow"> 
                         <img src="img/department-of-cse/Biswas-Kumar-120x128.jpg" alt="Biswas Kumar" style="width:100%">
                         <h2 style="font-family: times new roman;">Name: Biswas Kumar</h2>
                         <p class="title" style="font-family: times new roman;">Position: Assistant Professor</p>
@@ -395,11 +396,13 @@
                             <a href="#"><i class="fa fa-linkedin"></i></a>
                             <a href="#"><i class="fa fa-facebook"></i></a>
                         </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="column">
                     <div class="card">
+                        <div class="bordershadow"> 
                         <img src="img/department-of-cse/Mohammud-Mehadi-Hasan.jpg" alt="Mohammud Mehadi Hasan" style="width:100%">
                         <h2 style="font-family: times new roman;">Name: Mohammud Mehadi Hasan</h2>
                         <p class="title" style="font-family: times new roman;">Position: Assistant Professor & Course Coordinator</p>
@@ -413,11 +416,13 @@
                             <a href="#"><i class="fa fa-linkedin"></i></a>
                             <a href="#"><i class="fa fa-facebook"></i></a>
                         </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="column">
                     <div class="card">
+                        <div class="bordershadow"> 
                         <img src="img/department-of-cse/Md.-Al-Jubair.jpg" alt="Md.Al Jubair" style="width:100%">
                         <h2 style="font-family: times new roman;">Name: Md.Al Jubair</h2>
                         <p class="title" style="font-family: times new roman;">Position: Sr. Lecturer</p>
@@ -431,6 +436,7 @@
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-linkedin"></i></a>
                             <a href="#"><i class="fa fa-facebook"></i></a>
+                        </div>
                         </div>
                     </div>
                 </div>
