--- a/index.html
+++ b/index.html
@@ -259,9 +259,25 @@
                 European University of Bangladesh (EUB) is a third generation private university aiming at providing modern education of European standard in Bangladesh. It has been accredited by the Government of the People’s Republic of Bangladesh, curricula and academic while its programs have been approved by the University Grants Commission (UGC). It was established under the Private University Act 2010 with the approval of the Government of Bangladesh on 14th March, 2012 for awarding degrees in various fields. The President of the People’s Republic of Bangladesh is the Chancellor of European University of Bangladesh. The University applies student- centred teaching and learning methods, pursues applied research and encourages creative activities with the objective of producing world-class professionals to meet national and international standard, as well as, the requirement of its graduates for their career development and employment. We are constantly investing in our campus and facilities to ensure all students have a world-class teaching and learning environment, state-of-the-art facilities and enhancing the vibrancy of the campus experience to make students time in EUB truly one to cherish.
                 The University is located at the heart of the Dhaka City at prestigious institutional zone of Gabtoli (opposite to Gabtoli Bus Terminal) with well-connected communication system.
             </div>
-            <div>
+           
+                        <!-- Modal Video -->
+        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content rounded-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- 16:9 aspect ratio -->
+                        <div class="ratio ratio-16x9">
+                            <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
+                                allow="autoplay"></iframe>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
+            </div>
     </div>
 
     <!-- ======= Our Mission and Vision ======= -->
@@ -299,20 +315,16 @@
                 </tr>
                 <tr>
                     <td><a href="" style="text-decoration: none;">Business Administration ( BBA )</a></td>
-
                 </tr>
                 <tr>
                     <td><a href="" style="text-decoration: none;">Law (LLB-Hons)</a></td>
                 </tr>
-
                 <tr>
                     <td><a href="" style="text-decoration: none;">Tourism and Hospitality Management</a></td>
-
                 </tr>
                 <tr>
                     <td><a href="" style="text-decoration: none;">BSS (Hons. in Economics)</a></td>
                 </tr>
-
                 <tr>
                     <td><a href="" style="text-decoration: none;">Industrial Production Engineering</a></td>
                 </tr>
@@ -339,7 +351,6 @@
                 </tr>
                 <tr>
                     <td><a href="" style="text-decoration: none;">Master in Governance and Development Studies</a></td>
-
                 </tr>
                 <tr>
                     <td><a href="" style="text-decoration: none;">MSS in Economics</a></td>
@@ -663,7 +674,7 @@
     </script>
 
     <!-- Gallery Image js  -->
-    <script>
+    <!-- <script>
         let slideIndex = 1;
         showSlides(slideIndex);
         
@@ -692,7 +703,7 @@
           dots[slideIndex-1].className += " active";
           captionText.innerHTML = dots[slideIndex-1].alt;
         }
-        </script>
+        </script> -->
 
     <!--Top-->
     <script src="javascript/top.js"></script>
