--- a/bachelor-of-computer-science.html
+++ b/bachelor-of-computer-science.html
@@ -138,7 +138,7 @@
     <!-- ======= Department of Computer Science and Engineering ======= -->
     <div class="box">
         <div class="box_row">
-            <div class="box_text"><b style="text-align: center;">Department of Computer Science and Engineering (CSE)</b><br><br>
+            <div class="box_text"><h3 style="text-align: center;">Department of Computer Science and Engineering (CSE)</h3><br><br>
                 1. Name of the Program: Bachelor of Science in Computer Science and Engineering (CSE)<br>
 
                 2. a. Name of the Department: Department of Computer Science and Engineering (CSE)<br>
