--- a/index.html
+++ b/index.html
@@ -260,26 +260,24 @@
                 The University is located at the heart of the Dhaka City at prestigious institutional zone of Gabtoli (opposite to Gabtoli Bus Terminal) with well-connected communication system.
             </div>
            
-                        <!-- Modal Video -->
-        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content rounded-0">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- 16:9 aspect ratio -->
-                        <div class="ratio ratio-16x9">
-                            <!-- <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                                allow="autoplay"> </iframe> -->
-                                <iframe height="600" width="100%" src="https://www.youtube.com/embed/5rJgu3U5lbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                               <!-- About Start -->
+        <div class="container-fluid about py-5">
+            <div class="container py-5">
+                <div class="row g-5 align-items-center">
+                    <div class="col-lg-5">
+                        <div class="video">
+                            <img src="img/about-1.jpg" class="img-fluid rounded" alt="">
+                            <div class="position-absolute rounded border-5 border-top border-start border-white" style="bottom: 0; right: 0;;">
+                                <img src="img/about-2.jpg" class="img-fluid rounded" alt="">
+                            </div>
+                            <button type="button" class="btn btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
+                                <span></span>
+                            </button>
                         </div>
                     </div>
-                </div>
-            </div>
-            </div>
-            </div>
+                    </div>
+                    </div>
+                    
             </div>
     </div>
 
