--- a/index.html
+++ b/index.html
@@ -259,26 +259,9 @@
                 European University of Bangladesh (EUB) is a third generation private university aiming at providing modern education of European standard in Bangladesh. It has been accredited by the Government of the People’s Republic of Bangladesh, curricula and academic while its programs have been approved by the University Grants Commission (UGC). It was established under the Private University Act 2010 with the approval of the Government of Bangladesh on 14th March, 2012 for awarding degrees in various fields. The President of the People’s Republic of Bangladesh is the Chancellor of European University of Bangladesh. The University applies student- centred teaching and learning methods, pursues applied research and encourages creative activities with the objective of producing world-class professionals to meet national and international standard, as well as, the requirement of its graduates for their career development and employment. We are constantly investing in our campus and facilities to ensure all students have a world-class teaching and learning environment, state-of-the-art facilities and enhancing the vibrancy of the campus experience to make students time in EUB truly one to cherish.
                 The University is located at the heart of the Dhaka City at prestigious institutional zone of Gabtoli (opposite to Gabtoli Bus Terminal) with well-connected communication system.
             </div>
-           
-                               <!-- About Start -->
-        <div class="container-fluid about py-5">
-            <div class="container py-5">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-5">
-                        <div class="video">
-                            <img src="img/about-1.jpg" class="img-fluid rounded" alt="">
-                            <div class="position-absolute rounded border-5 border-top border-start border-white" style="bottom: 0; right: 0;;">
-                                <img src="img/about-2.jpg" class="img-fluid rounded" alt="">
-                            </div>
-                            <button type="button" class="btn btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                                <span></span>
-                            </button>
-                        </div>
-                    </div>
-                    </div>
-                    </div>
-                    </div>
+            <div>
             </div>
+        </div>
     </div>
 
     <!-- ======= Our Mission and Vision ======= -->
@@ -384,15 +367,12 @@
                 <tr>
                     <td><a href="" style="text-decoration: none;">Admission Information</a></td>
                 </tr>
-
                 <tr>
                     <td><a href="" style="text-decoration: none;">Courses Tuition Fees</a></td>
-
                 </tr>
                 <tr>
                     <td><a href="" style="text-decoration: none;">Contact Admission Office</a></td>
                 </tr>
-
                 <tr>
                     <td><a href="" style="text-decoration: none;">Clubs And Co-Curriculars</a></td>
                 </tr>
@@ -675,7 +655,7 @@
     </script>
 
     <!-- Gallery Image js  -->
-    <!-- <script>
+    <script>
         let slideIndex = 1;
         showSlides(slideIndex);
         
@@ -704,7 +684,7 @@
           dots[slideIndex-1].className += " active";
           captionText.innerHTML = dots[slideIndex-1].alt;
         }
-        </script> -->
+        </script>
 
     <!--Top-->
     <script src="javascript/top.js"></script>
