--- a/index.html
+++ b/index.html
@@ -527,137 +527,23 @@
 
 
     <!-- ======= Javascript Start ======= -->
-    
+
+    <!-- ======= Main Slider javascript Start ======= -->
+    <script src="javascript/main_slider.js"></script>
+
     <!-- ======= Text Slider javascript Start ======= -->
-
-    <script>
-        // const slider = document.getElementById('slider');
-        // let currentIndex = 0;
-
-        // function nextSlide() {
-        //     currentIndex = (currentIndex + 1) % slider.children.length;
-        //     updateSlider();
-        // }
-
-        // function updateSlider() {
-        //     const translateValue = -currentIndex * 100 + '%';
-        //     slider.style.transform = `translateX(${translateValue})`;
-        // }
-
-        // setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
-
-    </script> 
-
-    <!-- ======= Slider javascript Start ======= -->
-    <script type="text/javascript">
-        const slider = document.querySelector(".slider");
-        const nextBtn = document.querySelector(".next-btn");
-        const prevBtn = document.querySelector(".prev-btn");
-        const slides = document.querySelectorAll(".slide");
-        const slideIcons = document.querySelectorAll(".slide-icon");
-        const numberOfSlides = slides.length;
-        var slideNumber = 0;
-
-        //image slider next button
-        nextBtn.addEventListener("click", () => {
-            slides.forEach((slide) => {
-                slide.classList.remove("active");
-            });
-            slideIcons.forEach((slideIcon) => {
-                slideIcon.classList.remove("active");
-            });
-
-            slideNumber++;
-
-            if (slideNumber > (numberOfSlides - 1)) {
-                slideNumber = 0;
-            }
-
-            slides[slideNumber].classList.add("active");
-            slideIcons[slideNumber].classList.add("active");
-        });
-
-        //image slider previous button
-        prevBtn.addEventListener("click", () => {
-            slides.forEach((slide) => {
-                slide.classList.remove("active");
-            });
-            slideIcons.forEach((slideIcon) => {
-                slideIcon.classList.remove("active");
-            });
-
-            slideNumber--;
-
-            if (slideNumber < 0) {
-                slideNumber = numberOfSlides - 1;
-            }
-
-            slides[slideNumber].classList.add("active");
-            slideIcons[slideNumber].classList.add("active");
-        });
-
-        //image slider autoplay
-        var playSlider;
-
-        var repeater = () => {
-            playSlider = setInterval(function() {
-                slides.forEach((slide) => {
-                    slide.classList.remove("active");
-                });
-                slideIcons.forEach((slideIcon) => {
-                    slideIcon.classList.remove("active");
-                });
-
-                slideNumber++;
-
-                if (slideNumber > (numberOfSlides - 1)) {
-                    slideNumber = 0;
-                }
-
-                slides[slideNumber].classList.add("active");
-                slideIcons[slideNumber].classList.add("active");
-            }, 4000);
-        }
-        repeater();
-
-        //stop the image slider autoplay on mouseover
-        slider.addEventListener("mouseover", () => {
-            clearInterval(playSlider);
-        });
-
-        //start the image slider autoplay again on mouseout
-        slider.addEventListener("mouseout", () => {
-            repeater();
-        });
-
-    </script>
-    <!-- ======= Slider javascript End ======= -->
-
+    <script src="javascript/text_slider.js"></script> 
 
     <!-- ======= Header Sky ======= -->
-
-    <script>
-        window.onscroll = function() {
-            myFunction()
-        };
-
-        var header = document.getElementById("myHeader");
-        var sticky = header.offsetTop;
-
-        function myFunction() {
-            if (window.pageYOffset > sticky) {
-                header.classList.add("sticky");
-            } else {
-                header.classList.remove("sticky");
-            }
-        }
-    </script>
+    <script src="javascript/header_sky.js"></script>
 
     <!-- Gallery Image js  -->
     <script src="javascript/gallery_image.js"></script>
 
     <!--Top Button-->
     <script src="javascript/top.js"></script>
+
+        <!-- ======= Javascript End ======= -->
 
 </body>
 </html>
