--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-        <div class="box_row" style="width: 30%;">
+        <div class="box_row" style="display: flexbox;">
             <table id="myTable">
                 <tr class="header">
                     <th>Graduate Undergraduate Programs</th>
@@ -371,13 +371,6 @@
             </table>
 
         </div>
-    </div>
-
-        <div class="box_row" style="width: 30%;text-decoration: none;">
-            
-    </div>
-        <div class="box_row" style="width: 30%;text-decoration: none;">
-           
     </div>
 
     <!-- ======= Our  ======= -->
