--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-        <div class="box_row" style="display: flexbox;">
+        <div class="box_row" style="display: flex;">
             <table id="myTable">
                 <tr class="header">
                     <th>Graduate Undergraduate Programs</th>
