--- a/department-of-cse.html
+++ b/department-of-cse.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
-    <title>Contact Us || EUROPEAN UNIVERSITY OF BANGLADESH</title>
+    <title>Department of CSE || EUROPEAN UNIVERSITY OF BANGLADESH</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon-logo.jpg">
 
