--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Hridoy Jomadder">
 
 <head>
-    <title>EUROPEAN UNIVERSITY OF BANGLADESH</title>
+    <title>Gally | EUROPEAN UNIVERSITY OF BANGLADESH</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon-logo.jpg">
 
