--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li><a href="">Mission and Vision</a></li>
                         <li><a href="">Special Features</a></li>
                         <li><a href="">Graduate Profile</a></li>
-                        <li><a href="">Gallery</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
                     </ul>
                 </li>
 
