--- a/bachelor-of-computer-science.html
+++ b/bachelor-of-computer-science.html
@@ -141,9 +141,9 @@
             <div class="box_text"><h3 style="text-align: center;">Department of Computer Science and Engineering (CSE)</h3><br><br>
                 1. Name of the Program: Bachelor of Science in Computer Science and Engineering (CSE)<br>
 
-                2. <li>a. Name of the Department: Department of Computer Science and Engineering (CSE)<br></li>
+                2. <ul>a. Name of the Department: Department of Computer Science and Engineering (CSE)</ul>
 
-                   <li>b. Name of the Faculty: Science and Engineering<br></li>
+                   <ul>b. Name of the Faculty: Science and Engineering</ul>
                 <br>
                 3. Objectives and Goal<br>
                 The increasing needs for computer science and engineers in worldwide job markets need not to be overemphasized. To keep pace with the advancement in computer science and engineering and provide emphasis in fulfilling the needs, it is essential that efforts to be made both in the public and private sectors to develop human resources in this particular field in Bangladesh.
