--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <!-- ======= Text-slider ======= -->
     <div class="slider-container">
-        <div class="slider-content" id="slider">
+        <div class="slider-content" id="text-slider">
             <div class="slider-item">
                 <a href="https://example.com">Slide 1 The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
             </div>
