--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <!-- ======= Dropdwn ======= -->
-    <div class="dropdwn" id="myHeader">
+    <div class="dropdwn">
         <nav>
 <!--<img src="img/logo-eub.png" style="height: auto;width: 250px;">-->
             <ul>
