--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@
     </div>
 
     <!-- ======= Dropdwn ======= -->
-    <div class="dropdwn">
+    <!-- Add a mobile navigation bar -->
+<div class="mobile-nav">
+    <div class="menu-icon" id="menuIcon">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <div class="mobile-menu">
+        <!-- Include your existing navigation menu here -->
+        <!-- ... -->
+    </div>
+</div>
+    <div class="dropdwn" id="myHeader">
         <nav>
 <!--<img src="img/logo-eub.png" style="height: auto;width: 250px;">-->
             <ul>
