--- a/index.html
+++ b/index.html
@@ -154,28 +154,28 @@
         <div class="slide">
             <img src="img/Business-Buzz46.jpg" alt="">
             <div class="info">
-                <h2>Tropical Desert</h2>
+                <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
         <div class="slide">
             <img src="img/IMG_1112_Edited-scaled.jpg" alt="">
             <div class="info">
-                <h2>Steaming Volcanoes</h2>
+                <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
         <div class="slide">
             <img src="img/IMG_1927-scaled.jpg" alt="">
             <div class="info">
-                <h2>Mountain River</h2>
+                <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
         <div class="slide">
             <img src="img/IMG_1939_Edited-scaled.jpg" alt="">
             <div class="info">
-                <h2>Egypt Pyramids</h2>
+                <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
