--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
     <div class="slider-container">
         <div class="slider-content" id="slider">
             <div class="slider-item">
-                <a href="https://example.com">Slide 1 The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
+                <a href="https://example.com">Notice 1: The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
             </div>
             <div class="slider-item">
-                <a href="https://example.com">Slide 2 The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
+                <a href="https://example.com">Notice 2: The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
             </div>
             <div class="slider-item">
-                <a href="https://example.com">Slide 3 The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
+                <a href="https://example.com">Notice 3: The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
             </div>
         </div>
     </div>
@@ -231,7 +231,7 @@
     <div class="box">
         <div class="box_row">
             <div class="box_img">
-                <img src="img/Dr.-Mokbul-Ahmed-Khan.jpg">
+                <img src="img/Dr.-Mokbul-Ahmed-Khan.jpg" style="position: right;">
             </div>
             <div class="box_text">
                 <b style="font-family: times new roman; font-size: 18px;">Message From Vice Chairman<br></b>
