--- a/gallery.html
+++ b/gallery.html
@@ -152,7 +152,11 @@
     <!-- ======= Our  ======= -->
     <div class="box">
         <h2 style="color: #fff;">EUB Gallery</h2><br>
-          <img id="myImg" src="img_snow.jpg" alt="Snow" style="width:100%;max-width:300px">
+          <img id="myImg" src="img/1.jpg" alt="Text" style="width:100%;max-width:300px">
+          <img id="myImg" src="img/2.jpg" alt="Text" style="width:100%;max-width:300px">
+          <img id="myImg" src="img/3.jpg" alt="Text" style="width:100%;max-width:300px">
+          <img id="myImg" src="img/4.jpg" alt="Text" style="width:100%;max-width:300px">
+          <img id="myImg" src="img/5.jpg" alt="Text" style="width:100%;max-width:300px">
     </div>
 
     <!-- The Modal -->
