--- a/gallery.html
+++ b/gallery.html
@@ -151,7 +151,7 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-        <h2 style="color: #fff;">EUB Gallery</h2><br>
+        <h2 style="color: #fff;">EUB Gallery</h2><br><br>
           <img id="myImg" src="img/1.jpg" alt="Text" style="width:100%;max-width:300px">
           <img id="myImg" src="img/2.jpg" alt="Text" style="width:100%;max-width:300px">
           <img id="myImg" src="img/3.jpg" alt="Text" style="width:100%;max-width:300px">
