--- a/gallery.html
+++ b/gallery.html
@@ -163,6 +163,10 @@
     <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img01">
+    <img class="modal-content" id="img02">
+    <img class="modal-content" id="img03">
+    <img class="modal-content" id="img04">
+    <img class="modal-content" id="img05">
     <div id="caption"></div>
     </div>
 
