--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="box">
         <div class="box_row">
             <div class="box_img">
-                <img src="img/Dr.-Mokbul-Ahmed-Khan.jpg" style="padding-left: 530px;">
+                <img src="img/Dr.-Mokbul-Ahmed-Khan.jpg"> //style="padding-left: 530px;"
             </div>
             <div class="box_text">
                 <b style="font-family: times new roman; font-size: 18px;">Message From Vice Chairman<br></b>
