--- a/index.html
+++ b/index.html
@@ -264,6 +264,16 @@
         </div>
     </div>
 
+    <!-- ======= Icon ======= -->
+    <div class="box">
+        <div class="box_row">
+        <img src="img/Alumni.png">
+        <img src="img/Alumni.png">
+        <img src="img/Alumni.png">
+        <img src="img/Alumni.png">
+        </div>
+     </div>
+
     <!-- ======= Our Mission and Vision ======= -->
     <div class="box">
         <div class="box_row">
