--- a/index.html
+++ b/index.html
@@ -268,9 +268,10 @@
     <div class="box">
         <div class="box_row">
         <img src="img/Alumni.png">
-        <img src="img/Alumni.png">
-        <img src="img/Alumni.png">
-        <img src="img/Alumni.png">
+        <img src="img/Students-Affairs-3.png">
+        <img src="img/eub-Organogram.png">
+        <img src="img/Libeary.png">
+        <img src="img/Gallery.png">
         </div>
      </div>
 
