--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
     <!-- ======= Icon ======= -->
     <div class="box">
-        <div class="box_row">
+        <div class="box_row" style="margin: 15px;">
         <img src="img/Alumni.png">
         <img src="img/Students-Affairs-3.png">
         <img src="img/eub-Organogram.png">
