--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 
     <!-- ======= Icon ======= -->
     <div class="box">
-        <div class="box_row" style="margin: 15px;">
-        <img src="img/Alumni.png">
+        <div class="box_row">
+        <img src="img/Alumni.png" style="margin: 15px;">
         <img src="img/Students-Affairs-3.png">
         <img src="img/eub-Organogram.png">
         <img src="img/Libeary.png">
