--- a/index.html
+++ b/index.html
@@ -267,11 +267,13 @@
     <!-- ======= Icon ======= -->
     <div class="box">
         <div class="box_row">
-        <img src="img/Alumni.png" style="margin: 15px;">
-        <img src="img/Students-Affairs-3.png">
-        <img src="img/eub-Organogram.png">
-        <img src="img/Libeary.png">
-        <img src="img/Gallery.png">
+        <img src="img/Alumni.png" style="padding-right:30px">
+        <span>Alumni</span>
+        <img src="img/Students-Affairs-3.png" style="padding-right:30px">
+        <span></span>
+        <img src="img/eub-Organogram.png" style="padding-right:30px">
+        <img src="img/Libeary.png" style="padding-right:30px">
+        <img src="img/Gallery.png" style="padding-right:30px">
         </div>
      </div>
 
