--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
     <!-- ======= Icon ======= -->
     <div class="box">
-        <div class="box_row">
+        
         <span>Alumni</span>
         <img src="img/Alumni.png" style="padding-right:30px">
         
@@ -275,7 +275,7 @@
         <img src="img/eub-Organogram.png" style="padding-right:30px">
         <img src="img/Libeary.png" style="padding-right:30px">
         <img src="img/Gallery.png" style="padding-right:30px">
-        </div>
+        <!-- </div> -->
      </div>
 
     <!-- ======= Our Mission and Vision ======= -->
