--- a/index.html
+++ b/index.html
@@ -264,20 +264,7 @@
         </div>
     </div>
 
-    <!-- ======= Icon ======= -->
-    <div class="box">
-        <div class="box_row">
-        <span>Alumni</span>
-        <img src="img/Alumni.png" style="padding-right:30px">
-        
-        <img src="img/Students-Affairs-3.png" style="padding-right:30px">
-        <span></span>
-        <img src="img/eub-Organogram.png" style="padding-right:30px">
-        <img src="img/Libeary.png" style="padding-right:30px">
-        <img src="img/Gallery.png" style="padding-right:30px">
-        </div>
-     </div>
-
+    
     <!-- ======= Our Mission and Vision ======= -->
     <div class="box">
         <div class="box_row">
@@ -291,6 +278,23 @@
             </div>
         </div>
     </div>
+
+    <!-- ======= Icon ======= -->
+    <div class="box">
+        <div class="box_row">
+        <p>Alumni</p>
+        <img src="img/Alumni.png" style="padding-right:30px">
+        <p>Students Affairs</p>
+        <img src="img/Students-Affairs-3.png" style="padding-right:30px">
+        <p>Organogram</p>
+        <img src="img/eub-Organogram.png" style="padding-right:30px">
+        <p>Libeary</p>
+        <img src="img/Libeary.png" style="padding-right:30px">
+        <p>Gallery</p>
+        <img src="img/Gallery.png" style="padding-right:30px">
+        </div>
+     </div>
+
 
     <!-- ======= Our  ======= -->
     <div class="box">
