--- a/index.html
+++ b/index.html
@@ -282,16 +282,18 @@
     <!-- ======= Icon ======= -->
     <div class="box">
         <div class="box_row">
-        <p>Alumni</p>
-        <img src="img/Alumni.png" style="padding-right:5px">
-        <p>Students Affairs</p>
-        <img src="img/Students-Affairs-3.png" style="padding-right:30px">
-        <p>Organogram</p>
-        <img src="img/eub-Organogram.png" style="padding-right:30px">
-        <p>Libeary</p>
-        <img src="img/Libeary.png" style="padding-right:30px">
-        <p>Gallery</p>
-        <img src="img/Gallery.png" style="padding-right:30px">
+            <div style="margin: 5px;">
+                <p>Alumni</p>
+                <img src="img/Alumni.png" style="padding-right:5px">
+                <p>Students Affairs</p>
+                <img src="img/Students-Affairs-3.png" style="padding-right:30px">
+                <p>Organogram</p>
+                <img src="img/eub-Organogram.png" style="padding-right:30px">
+                <p>Libeary</p>
+                <img src="img/Libeary.png" style="padding-right:30px">
+                <p>Gallery</p>
+                <img src="img/Gallery.png" style="padding-right:30px">
+            </div>
         </div>
      </div>
 
