--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- ======= Slider Start ======= -->
     <div class="slider">
         <div class="slide active">
-            <img src="img/EUB-CAMPUS-2019.jpg" alt="">
+            <img src="img/European-University-Of-Bangladesh-767x472@2x.jpg" alt="">
             <div class="info">
                 <h2>Welcome to European University of Bangladesh</h2>
                 <p>European University of Bangladesh (EUB) is a third generation private university aiming at providing modern education of European standard in Bangladesh. It has been accredited by the Government of the People’s Republic of Bangladesh, curricula and academic while its programs have been approved by the University Grants Commission (UGC). It was established under the Private University Act 2010 with the approval of the Government of Bangladesh on 14th March, 2012 for awarding degrees in various fields. The President of the People’s Republic of Bangladesh is the Chancellor of European University of Bangladesh. </p>
