--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <!-- ======= Icon ======= -->
     <div class="box">
         <div class="box_row">
-            <div style="margin: 5px;">
+            <div style="margin: 5px;display: flex;">
                 <p>Alumni</p>
                 <img src="img/Alumni.png" style="padding-right:5px">
                 <p>Students Affairs</p>
