--- a/index.html
+++ b/index.html
@@ -437,22 +437,22 @@
 
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="img/Business-Buzz46.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="img/1.jpg" style="width:100%" onclick="currentSlide(1)" alt="add to text">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/Development-Fair19-1200x800.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="img/Development-Fair19-1200x800.jpg" style="width:100%" onclick="currentSlide(2)" alt="add to text">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/IMG_1112_Edited-scaled.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="img/2.jpg" style="width:100%" onclick="currentSlide(3)" alt="add to text">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/IMG_1927-scaled.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="img/3.jpg" style="width:100%" onclick="currentSlide(4)" alt="add to text">
     </div>
     <div class="column">
-      <img class="demo cursor" src="img/IMG_1939_Edited-scaled.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="img/4.jpg" style="width:100%" onclick="currentSlide(5)" alt="add to text">
     </div>    
     <div class="column">
-      <img class="demo cursor" src="img/IMG_1943_edited-scaled.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="img/5.jpg" style="width:100%" onclick="currentSlide(6)" alt="add to text">
     </div>
   </div>
    </div>
