--- a/index.html
+++ b/index.html
@@ -152,28 +152,28 @@
             </div>
         </div>
         <div class="slide">
-            <img src="img/Business-Buzz46.jpg" alt="">
+            <img src="img/1.jpg" alt="">
             <div class="info">
                 <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="img/IMG_1112_Edited-scaled.jpg" alt="">
+            <img src="img/2.jpg" alt="">
             <div class="info">
                 <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="img/IMG_1927-scaled.jpg" alt="">
+            <img src="img/3.jpg" alt="">
             <div class="info">
                 <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
         <div class="slide">
-            <img src="img/IMG_1939_Edited-scaled.jpg" alt="">
+            <img src="img/4.jpg" alt="">
             <div class="info">
                 <h2>Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
